<resources>
    <string name="app_name">Educasen</string>

    <!-- Textos para el activity main -->
    <string name="botonLogin">Iniciar sesion</string>
    <string name="botonRegistro">Registrarse</string>

    <!-- Textos para el activity registro -->
    <string name="crearCuentaTXT">Crear una cuenta</string>
    <string name="NombreEt">Nombres</string>
    <string name="CorreoEt">Correo electronico</string>
    <string name="ContrasenaEt">Contraseña</string>
    <string name="ConfirmarContrasenaEt">Confirmar contraseña</string>
    <string name="RegistrarUsuario">Registrar</string>
    <string name="TengoUnaCuentaTXT">Tengo una cuenta</string>

    <!-- Textos para el activity login -->
    <string name="Ingresar">Ingresar</string>
    <string name="IniciarSesion">Iniciar Sesion</string>
    <string name="CorreoLogin">Correo</string>
    <string name="PassLogin">Contraseña</string>
    <string name="Btn_Login">Ingresar</string>
    <string name="UsuarioNuevoTXT">¿No tienes una cuenta? Registrate</string>

    <!-- Textos para el activity menu principal -->
    <string name="CerrarSesion">Salir</string>
</resources>